Prepare POWER LAW Digital final deliverable
